Name:          lambdacat
Version:       0.0
Stability:     Alpha
Synopsis:      Webkit Browser
Description:   A Browser based on WebKit, concepted to be easy to use and
               extendable
License:       BSD3
License-File:  LICENSE
Build-Type:    Simple
Author:        Andreas Baldeau, Daniel Ehlers
Maintainer:    Andreas Baldeau, Daniel Ehlers
Category:      User Interfaces
Tested-With:   GHC == 6.12.3
Cabal-Version: >= 1.2.3

Extra-Source-Files:
    README

Data-Files:
    lambdacat.glade
    lambdacat.gtkrc

Executable lambdacat
    Main-is: Main.hs

    Ghc-Options:
        -O2 -Wall -threaded

Library
    Build-Depends:
        base >= 4 && < 5,
        mtl >= 1.1 && < 1.2,
        glib == 0.12.*,
        gtk == 0.12.*,
        glade == 0.12.*,
        cairo == 0.12.*,
        webkit >= 0.12.1 && < 0.13,
        poppler == 0.12.*,
        network == 2.2.*,
        containers == 0.3.*,
        process == 1.0.*,
        dyre >= 0.8.5 && < 0.9,
        filepath,
        directory,
        cmdargs == 0.6.*,
        template-haskell == 2.4.*

    Ghc-Options:
        -O2 -Wall

    Exposed-Modules:
        LambdaCat
        LambdaCat.Configure
        LambdaCat.CmdArgs
        LambdaCat.Loadable
        LambdaCat.Class
        LambdaCat.Supply 
        LambdaCat.View.Web
        LambdaCat.UI.Glade
        LambdaCat.UI.Glade.PersistentTabId

    Other-Modules:
        Paths_lambdacat

    Extensions:
        DeriveDataTypeable,
        ExistentialQuantification,
        FlexibleInstances,
        FunctionalDependencies,
        GeneralizedNewtypeDeriving,
        MultiParamTypeClasses,
        RankNTypes,
        TypeSynonymInstances

