Name:          lambdacat
Version:       0.1.1
Stability:     Alpha
Synopsis:      Webkit Browser
Description:   A Browser based on WebKit, concepted to be easy to use and
               extendable.
License:       BSD3
License-File:  LICENSE
Build-Type:    Simple
Author:        Andreas Baldeau, Daniel Ehlers
Maintainer:    Andreas Baldeau <andreas@baldeau.net>,
               Daniel Ehlers <danielehlers@mindeye.net>
Homepage:      http://github.com/baldo/lambdacat
Bug-Reports:   http://github.com/baldo/lambdacat/issues
Category:      User Interfaces
Tested-With:   GHC == 7.0.3
Cabal-Version: >= 1.10

Extra-Source-Files:
    README.md
    STYLE.md

Data-Files:
    lambdacat.glade
    lambdacat.gtkrc

Source-Repository head
    Type:     git
    Location: git://github.com/baldo/lambdacat.git

Executable lambdacat
    Main-is: Main.hs

    Default-Language:
        Haskell2010

    Build-Depends:
        base == 4.*,
        containers == 0.4.*,
        cmdargs == 0.7,
        dyre >= 0.8.6 && < 0.9,
        glade == 0.12.*,
        gtk == 0.12.*,
        mtl == 2.0.*,
        network == 2.3.*,
        webkit == 0.12.1

    Ghc-Options:
        -Wall

Library
    Default-Language:
        Haskell2010

    Build-Depends:
        base == 4.*,
        cmdargs == 0.7,
        containers == 0.4.*,
        dyre >= 0.8.6 && < 0.9,
        glade == 0.12.*,
        gtk == 0.12.*,
        mtl == 2.0.*,
        network == 2.3.*,
        webkit == 0.12.1

    Ghc-Options:
        -Wall

    Exposed-Modules:
        LambdaCat
        LambdaCat.Configure
        LambdaCat.Supplier
        LambdaCat.Supplier.Web
        LambdaCat.Utils.URI
        LambdaCat.View
        LambdaCat.View.Web
        LambdaCat.Session
        LambdaCat.History
        LambdaCat.UI
        LambdaCat.UI.Glade

    Other-Modules:
        Paths_lambdacat
        LambdaCat.Internal.Class
        LambdaCat.UI.Glade.PersistentTabId
        LambdaCat.CmdArgs

